Bug Fix: MealItemForm arrows on Firefox
Firefox was rendering ugly up/down arrows on each meal item form input. Added logic to MealItemForm.module.css to remove arrows.

--- a/src/components/Meals/MealItem/MealItemForm.module.css
+++ b/src/components/Meals/MealItem/MealItemForm.module.css
@@ -24,3 +24,11 @@
     var(--mysticgrape-1)
   );
 }
+
+/* Reset Firefox default styling for number input */
+.form input[type="number"] {
+  /* Remove up and down arrows in Firefox */
+  -moz-appearance: textfield;
+  /* Remove default spinner arrows in Firefox */
+  appearance: textfield;
+}
